--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--Menu haut de page-->
 <header>
     <div class="logo">
-        <img title="Jadoo : le voyage culinaire gourmet et gourmand" src="img/logo_jadoo_1.svg" alt="Jadoo"
+        <img title="Jadoo : un voyage culinaire gourmet et gourmand" src="img/logo_jadoo_1.svg" alt="Jadoo"
             height="35px">
         <img title="Jadoo : un voyage culinaire gourmet et gourmand" src="img/logo_jadoo_2.svg" alt="Jadoo"
             height="35px">
